Add orientation sensor Add display rotation manager

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,4 @@
-qt5_add_resources(screenrotator_SRCS resources.qrc)
+set(screenrotator_SRCS displaymanager.cpp orientationsensor.cpp resources/resources.qrc)
 add_executable(screenrotator main.cpp ${screenrotator_SRCS})
-target_link_libraries(screenrotator Qt5::Qml Qt5::Gui)
+target_link_libraries(screenrotator Qt5::Gui Qt5::X11Extras Qt5::Sensors Xrandr)
 
