--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.0)
 
-find_package(Qt5 REQUIRED COMPONENTS Gui Qml)
+find_package(Qt5 REQUIRED COMPONENTS Gui X11Extras Sensors)
 
 set(CMAKE_AUTOMOC ON)
-
+set(CMAKE_AUTORCC ON)
 add_subdirectory(src)
