--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.0)
 
-find_package(Qt5 REQUIRED COMPONENTS Gui X11Extras Sensors)
+find_package(Qt5 REQUIRED COMPONENTS Gui Widgets X11Extras Sensors)
 
 set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTORCC ON)
