Also rotate pointer (touch screen) coordinates

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,4 @@
-set(screenrotator_SRCS displaymanager.cpp orientationsensor.cpp resources/resources.qrc trayicon.cpp)
+set(screenrotator_SRCS displaymanager.cpp orientationsensor.cpp resources/resources.qrc trayicon.cpp rotateinput.cpp)
 add_executable(screenrotator main.cpp ${screenrotator_SRCS})
-target_link_libraries(screenrotator Qt5::Gui Qt5::X11Extras Qt5::Sensors Qt5::Widgets Xrandr)
+target_link_libraries(screenrotator Qt5::Gui Qt5::X11Extras Qt5::Sensors Qt5::Widgets Xrandr Xi X11)
 
