install desktop files and binary

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,9 @@
 set(screenrotator_SRCS displaymanager.cpp orientationsensor.cpp resources/resources.qrc trayicon.cpp rotateinput.cpp)
 add_executable(screenrotator main.cpp ${screenrotator_SRCS})
+configure_file(screenrotator-autostart.desktop.in screenrotator-autostart.desktop)
 target_link_libraries(screenrotator Qt5::Gui Qt5::X11Extras Qt5::Sensors Qt5::Widgets Xrandr Xi X11)
 
+install(TARGETS screenrotator RUNTIME DESTINATION bin)
+install(FILES screenrotator.desktop DESTINATION share/applications)
+install(FILES resources/screen_rotator_256x256.png DESTINATION share/icons/hicolor/256x256/apps/ RENAME screenrotator.png)
+install(FILES ${CMAKE_CURRENT_BINARY_DIR}/screenrotator-autostart.desktop DESTINATION /etc/xdg/autostart/)
