--- a/aur/PKGBUILD
+++ b/aur/PKGBUILD
@@ -1,5 +1,5 @@
 pkgname=screenrotator-modified-git
-pkgver=0
+pkgver=r34.ed2e479
 pkgrel=1
 epoch=1
 pkgdesc='Automatic screen rotation daemon for X11'
